about to change bonuses to one line

--- a/client/rules.html
+++ b/client/rules.html
@@ -12,5 +12,6 @@
 <p>Clause B: .5 bonus if you catch Amy Tian with a new hair color.</p>
 <p>Clause C: Tag me in posts please so I can update points.</p>
 <p>Clause D: Club and Clubarino Dinner are safe zones.</p>
+<p>"Munchlax" Bonuses:  +/-2 for selfie. +/-3 for selfie stick.</p>
 </div>
 </template>
