--- a/client/submit.html
+++ b/client/submit.html
@@ -31,6 +31,30 @@
     </div>
   </div>
   <div class="form-group">
+    <label for="input-hair" class="col-sm-2 control-label">Hair Bonus</label>
+    <div class="col-sm-10 input-div">
+      <div class="checkbox">
+        <input type="checkbox" class="form-horizontal-checkbox" id="input-hair">
+      </div>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="input-selfie" class="col-sm-2 control-label">Selfie Bonus</label>
+    <div class="col-sm-10 input-div">
+      <div class="checkbox">
+        <input type="checkbox" class="form-horizontal-checkbox" id="input-selfie">
+      </div>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="input-selfie-stick" class="col-sm-2 control-label">Selfie Stick Bonus</label>
+    <div class="col-sm-10 input-div">
+      <div class="checkbox">
+        <input type="checkbox" class="form-horizontal-checkbox" id="input-selfie-stick">
+      </div>
+    </div>
+  </div>
+  <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <a class="btn btn-primary action-submit">Upload Image and Submit</a>
     </div>
