--- a/client/submit.html
+++ b/client/submit.html
@@ -31,27 +31,17 @@
     </div>
   </div>
   <div class="form-group">
-    <label for="input-hair" class="col-sm-2 control-label">Hair Bonus</label>
+    <label class="col-sm-2 control-label">Bonuses</label>
     <div class="col-sm-10 input-div">
-      <div class="checkbox">
-        <input type="checkbox" class="form-horizontal-checkbox" id="input-hair">
-      </div>
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="input-selfie" class="col-sm-2 control-label">Selfie Bonus</label>
-    <div class="col-sm-10 input-div">
-      <div class="checkbox">
-        <input type="checkbox" class="form-horizontal-checkbox" id="input-selfie">
-      </div>
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="input-selfie-stick" class="col-sm-2 control-label">Selfie Stick Bonus</label>
-    <div class="col-sm-10 input-div">
-      <div class="checkbox">
-        <input type="checkbox" class="form-horizontal-checkbox" id="input-selfie-stick">
-      </div>
+      <label class="checkbox-inline" for="input-hair">
+        <input type="checkbox" id="input-hair"> Hair Color
+      </label>
+      <label class="checkbox-inline" for="input-selfie">
+        <input type="checkbox" id="input-selfie"> Selfie
+      </label>
+      <label class="checkbox-inline" for="input-selfie-stick">
+        <input type="checkbox" id="input-selfie-stick"> Selfie Stick
+      </label>
     </div>
   </div>
   <div class="form-group">
